--- a/styles.css
+++ b/styles.css
@@ -162,10 +162,10 @@ article {
   .inner-pricing-div {
     padding-left: 5px;
   }
-  .btn-change {
+  /* .btn-change {
     padding-top: 20px;
     padding-right: 5px;
-  }
+  } */
   .main-p {
     padding: 0 20px
   }
